--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -155,9 +155,9 @@
     "        else:\n",
     "            DataHandler.__instance = self\n",
     "            try:\n",
-    "                self.train_data = pd.read_csv(\"train.csv\")\n",
-    "                self.ideal_data = pd.read_csv(\"ideal.csv\")\n",
-    "                self.test_data = pd.read_csv(\"test.csv\")\n",
+    "                self.train_data = pd.read_csv(sys.argv[1])\n",
+    "                self.ideal_data = pd.read_csv(sys.argv[2])\n",
+    "                self.test_data = pd.read_csv(sys.argv[3])\n",
     "            except Exception as e:\n",
     "                print(\"Exception while loading data to dataFrame: \", e)\n",
     "                sys.exit(1)\n",
